@@ -63,8 +63,6 @@ import org.systemsbiology.biofabric.app.BioFabricWindow;
 import org.systemsbiology.biofabric.cmd.CommandSet;
 import org.systemsbiology.biofabric.cmd.ZoomCommandSupport;
 import org.systemsbiology.biofabric.cmd.ZoomTarget;
-import org.systemsbiology.biofabric.db.SimpleWorkspaceSource;
-import org.systemsbiology.biofabric.db.Workspace;
 import org.systemsbiology.biofabric.event.EventManager;
 import org.systemsbiology.biofabric.event.SelectionChangeEvent;
 import org.systemsbiology.biofabric.model.BioFabricNetwork;
@@ -91,7 +89,6 @@ import org.systemsbiology.biofabric.util.MinMax;
 import org.systemsbiology.biofabric.util.NID;
 import org.systemsbiology.biofabric.util.QuadTree;
 import org.systemsbiology.biofabric.util.UiUtil;
-import org.systemsbiology.biofabric.util.UndoSupport;
 
 /****************************************************************************
 **
@@ -138,7 +135,6 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   
   private int zoomIndex_;
   private TreeMap<Double, Integer> zoomMap_;
-  private int numZoom_;
   
   private Point lastPress_;  
   private Point lastView_;          
@@ -176,7 +172,6 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   private Rectangle2D worldRectNetAR_;
   private Rectangle2D worldRectScreenAR_;
   private Dimension screenDim_;
-  private ZoomerSource zoomSrc_;
   
   private PaintCache.FloaterSet floaterSet_;
   private Point selFocus_;
@@ -208,6 +203,9 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   private Rectangle clipRect2_;
   private ImgAndBufPool bis_;
   private List<BufferedImage> staleImages_;
+    
+  private Point	fullModelPos_;
+  private Dimension	fullModelExtent_;
   
   ////////////////////////////////////////////////////////////////////////////
   //
@@ -228,15 +226,13 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     fnt_ = fnt;
     bfo_ = bfo;
     bfw_ = bfw;
-    zoomSrc_ = new ZoomerSource();
-    zoomer_ = new BasicZoomTargetSupport(this, this, zoomSrc_);
+    zoomer_ = new BasicZoomTargetSupport(this, this);
     CommandSet fc = CommandSet.getCmds((isForMain) ? "mainWindow" : "selectionWindow");
     zcs_ = new ZoomCommandSupport(fc);
     isAMac_ = fc.isAMac();
     painter_ = new PaintCacheSmall(colGen);
-    fmt_.setPainters(painter_, null);
+    fmt_.setPainters(painter_, painter_);
     zoomMap_ = new TreeMap<Double, Integer>();
-    numZoom_ = 0;
     addMouseListener(new MouseHandler());
     addMouseMotionListener(new MouseMotionHandler());
     currLinkSelections_ = new HashSet<FabricLink>();
@@ -254,7 +250,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     clipRect2_ = new Rectangle();
    
     worldRectNetAR_ = new Rectangle2D.Double(0.0, 0.0, 100.0, 100.0); 
-    zoomSrc_.simpleSetWorkspace(new Workspace(UiUtil.rectFromRect2D(worldRectNetAR_))); 
+    zoomer_.setWorldRect(UiUtil.rectFromRect2D(worldRectNetAR_)); 
     bfn_ = null;
     
     floaterSet_ = new PaintCache.FloaterSet(null, null, null);
@@ -376,8 +372,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     fmt_.setModel(null); 
     zoomMap_.clear();
     worldRectNetAR_ = new Rectangle2D.Double(0.0, 0.0, 100.0, 100.0); 
-    zoomSrc_.simpleSetWorkspace(new Workspace(UiUtil.rectFromRect2D(worldRectNetAR_))); 
-    numZoom_ = 0;
+    zoomer_.setWorldRect(UiUtil.rectFromRect2D(worldRectNetAR_));
     clearSelections(); 
     fnt_.haveAModel(false);
     floaterSet_.clear();
@@ -437,13 +432,15 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
  
   /***************************************************************************
   **
-  ** Figure out the baseline zoom and derive others
+  ** This is currently the entire contorted calculation of zooms
   */
   
-  public void zoomForBuf(int[] zooms, Dimension screenSize) {
+  public int[] calcZoomSettings(Dimension screenSize) {
     
     //
-    // Figure out the fundamental zoom to get the model to fill the screen:
+    // Figure out the fundamental zoom to get the model to fill the screen. We will use this largest version
+  	// as the baseline. Note that for the view with the nav panel showing, we will zoom out on this largest
+  	// view.
     //
 
     double screenAR = screenSize.getWidth()  / screenSize.getHeight(); // > 1.0 for wide and flat screen
@@ -457,8 +454,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     
     double worldWidthScreenAR;
     double worldHeightScreenAR;
-    double zoom;
-    
+    double zoom;    
     
     if (worldAR > screenAR) {
     	worldWidthScreenAR = worldRectNetAR_.getWidth();
@@ -481,30 +477,71 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     double worldCenterX = worldRectNetAR_.getCenterX();
     double worldCenterY = worldRectNetAR_.getCenterY();
     
-    System.out.println("Zoom  " + zoom);
-    System.out.println("worldRectNetAR_ " + worldRectNetAR_);
-   
     double worldULX = worldCenterX - (worldWidthScreenAR / 2.0);
     double worldULY = worldCenterY - (worldHeightScreenAR / 2.0);
     worldRectScreenAR_ = new Rectangle2D.Double(worldULX, worldULY, worldWidthScreenAR, worldHeightScreenAR);
+      
+    //
+    // OK, the start zoom has been calculated to show the whole network. We now calculate powers of
+    // two until we basically fill the screen with a link glyph. Figure out that zoom level:
+    //
     
+    double maxZoom =  screenSize.getHeight() / (4.0 * GRID_SIZE);
     
-     System.out.println("worldWidthScreenAR " + worldWidthScreenAR);
-    System.out.println("worldHeightScreenAR " + worldHeightScreenAR);
-     System.out.println("worldRectScreenAR_ " + worldRectScreenAR_);
+    //
+    // We terminate the image tiling and go to straight rendering when we hit 10E4 links across the screen.
+    // In the case of tiny networks, we only generate a single image:
+    //
     
-    System.out.println("SD " + screenDim_ + " zoomLength " + zooms.length);
+    double transitionZoom =  screenSize.getWidth() / (1.0E4 * GRID_SIZE);
+
+    //
+    // Generate the zoom settings
+    //
+    
     double lastZoom = zoom;
-    for (int i = 0; i < zooms.length; i++) {
-      zoomMap_.put(new Double(lastZoom), Integer.valueOf(i));
-      lastZoom *= 2.0;
+    
+    ArrayList<Double> zoomList = new ArrayList<Double>();
+    ArrayList<Integer> forRet = new ArrayList<Integer>();
+    int count = 0;
+    while ((lastZoom < maxZoom) || (count < 1)) {
+    	Double zObj = Double.valueOf(lastZoom);
+    	zoomList.add(zObj);
+    	// We generate at least two zoom levels, both of which are image-based:
+    	if ((lastZoom < transitionZoom) || (count < 2)) {
+    		Integer index = Integer.valueOf(count);
+    	  zoomMap_.put(zObj, index); 
+    	  forRet.add(index);
+    	} 
+    	count++;
+      lastZoom *= 2.0;	
     }
+      
     //
     // Companion renderer needs this info too:
     //
+    
     bucketRend_.setModelDims(screenDim_, worldRectScreenAR_, bis_);
+    
+    int[] zooms = new int[forRet.size()];
+    double[] zoomVals = new double[zoomList.size()];
+    
+    count = 0;
+    for (Integer zo : forRet) {
+    	zooms[count++] = zo.intValue();
+    }
+    count = 0;
+    for (Double zo : zoomList) {
+    	zoomVals[count++] = zo.doubleValue();
+    }
 
-    return;
+    //
+    // Install the calculated zoom levels:
+    //
+    
+    zcs_.setZoomPoints(zoomVals); 
+   
+    return (zooms);
   }
 
   /***************************************************************************
@@ -532,9 +569,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     floaterSet_.currSelRect = null;
     rects_.clear();
     currSel_ = -1;
-    this.selections_ = null;
- //   selectionPainter_.buildObjCache(targetList_, linkList_, false, false, new HashMap<NID.WithName, Rectangle2D>(), 
-    		                          //  new HashMap<NID.WithName, List<Rectangle2D>>(), worldRectNetAR_);
+    selections_ = null;
     fnt_.haveASelection(false);
     handleFloaterChange();
     EventManager mgr = EventManager.getManager();
@@ -1117,7 +1152,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   */
 
   public void incrementToNextSelection() { 
-    bumpNextSelection(null);
+    bumpNextSelection();
     return;
   }
   
@@ -1127,7 +1162,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   */
 
   public void decrementToPreviousSelection() { 
-    bumpPreviousSelection(null);
+    bumpPreviousSelection();
     return;
   }  
   
@@ -1184,7 +1219,8 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     boolean showShadows = fdo.getDisplayShadows();
     painter_.buildObjCache(bfn_.getNodeDefList(), bfn_.getLinkDefList(showShadows), shadeNodes, 
                            showShadows, new HashMap<NID.WithName, Rectangle2D>(), 
-                           new HashMap<NID.WithName, List<Rectangle2D>>(), worldRectNetAR_, monitor);
+                           new HashMap<NID.WithName, List<Rectangle2D>>(), worldRectNetAR_, 
+                           bfn_.getNodeAnnotations(), bfn_.getLinkAnnotations(Boolean.valueOf(showShadows)), monitor);
     handleFloaterChange();
     return;
   }
@@ -1210,13 +1246,14 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     double netHeight = (1.0 + (2.0 * PAD_MULT_)) * rows * GRID_SIZE;
   
     worldRectNetAR_ = new Rectangle2D.Double(ulPtx, ulPty, netWidth, netHeight);
-    zoomSrc_.simpleSetWorkspace(new Workspace(UiUtil.rectFromRect2D(worldRectNetAR_)));
+    zoomer_.setWorldRect(UiUtil.rectFromRect2D(worldRectNetAR_)); 
  
     nodeNameLocations_ = new HashMap<NID.WithName, Rectangle2D>();
     drainNameLocations_ = new HashMap<NID.WithName, List<Rectangle2D>>();    
     painter_.buildObjCache(bfn_.getNodeDefList(), bfn_.getLinkDefList(showShadows), 
     		                   shadeNodes, showShadows, nodeNameLocations_, 
-    		                   drainNameLocations_, worldRectNetAR_, monitor);
+    		                   drainNameLocations_, worldRectNetAR_, 
+    		                   bfn_.getNodeAnnotations(), bfn_.getLinkAnnotations(Boolean.valueOf(showShadows)), monitor);
     bucketRend_.buildBucketCache(bfn_.getNodeDefList(), bfn_.getLinkDefList(showShadows), showShadows);
       
     LoopReporter lr = new LoopReporter(drainNameLocations_.size(), 20, monitor, 0.0, 1.0, "progress.drainsToQuad");
@@ -1250,35 +1287,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     requestFocus();
     return;
   }
-
-  /***************************************************************************
-  **
-  ** Install our zooms
-  */
   
-  public void installZooms() {
-    boolean showShadows = FabricDisplayOptionsManager.getMgr().getDisplayOptions().getDisplayShadows();
-    int lco = bfn_.getLinkCount(showShadows);
-    double linkLog = (lco == 0) ? 0 : Math.log(lco) / Math.log(2.0);
-    numZoom_ = Math.max(zoomMap_.size() + 8, (int)Math.ceil(linkLog) - 5);
-    double[] zoomVals = new double[numZoom_];
-    Iterator<Double> zmit = zoomMap_.keySet().iterator();
-    int count = 0;
-    while (zmit.hasNext()) {
-      Double zoom = zmit.next();
-      zoomVals[count++] = zoom.doubleValue();
-    }
-    double val = zoomVals[count - 1];
-    double div = 2.0;
-    for (int i = count; i < numZoom_; i++) {
-      zoomVals[i] = val * div;
-      div *= 2.0;
-    }
-    
-    zcs_.setCustomZoomPoints(zoomVals, 0, 0); 
-    return;
-  }
- 
   /***************************************************************************
   ** 
   ** Needed? Yes.
@@ -1291,11 +1300,24 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     // encapsulates the whole workspace.  Otherwise, drag rects on
     // e.g. long thin models go outside the workspace and we don't
     // actually zoom!
-    zoomSrc_.simpleSetWorkspace(new Workspace(getFullScreenWorld())); 
-    
+    zoomer_.setWorldRect(UiUtil.rectFromRect2D(getFullScreenWorld()));   
     return;
   }
-   
+  
+  /***************************************************************************
+  **
+  ** Find the viewport in world coordinates
+  */
+  
+  public Rectangle2D getViewInWorld(JViewport view) {
+    Point viewPos = view.getViewPosition();
+    Dimension viewDim = view.getExtentSize();
+    Point2D vrul = viewToWorld(viewPos);
+    Point2D vrlr = viewToWorld(new Point(viewPos.x + viewDim.width, viewPos.y + viewDim.height));
+    Rectangle2D viewInWorld = new Rectangle2D.Double(vrul.getX(), vrul.getY(), vrlr.getX() - vrul.getX(), vrlr.getY() - vrul.getY());
+    return (viewInWorld);
+  } 
+  
   /***************************************************************************
   **
   ** Find the viewport in world coordinates
@@ -1303,12 +1325,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   
   public Rectangle2D getViewInWorld() {
     JViewport view = jsp_.getViewport();
-    Point viewPos = view.getViewPosition();
-    Dimension viewDim = view.getExtentSize();
-    Point2D vrul = viewToWorld(viewPos);
-    Point2D vrlr = viewToWorld(new Point(viewPos.x + viewDim.width, viewPos.y + viewDim.height));
-    Rectangle2D viewInWorld = new Rectangle2D.Double(vrul.getX(), vrul.getY(), vrlr.getX() - vrul.getX(), vrlr.getY() - vrul.getY());
-    return (viewInWorld);
+    return (getViewInWorld(view));
   } 
   
   /***************************************************************************
@@ -1338,6 +1355,17 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     return;  
   }
  
+  public void setFullModelViewPos(Point vp) {
+  	fullModelPos_ = vp;
+  	return;
+  	
+  }
+  
+  public void setFullModelExtent(Dimension dim) {
+  	fullModelExtent_ = dim;
+  	return;
+  }
+ 
   /***************************************************************************
   **
   ** Drawing routine
@@ -1347,31 +1375,43 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   public void paintComponent(Graphics g) {
     super.paintComponent(g); 
     
+    //
+    // Make sure to return any stale images we have lying around:
+    //
+    
     Iterator<BufferedImage> siit = staleImages_.iterator();
     while (siit.hasNext()) {
     	BufferedImage bi = siit.next();
     	bis_.returnImage(bi);
-  	//  WritableRaster biRast = bi.getRaster(); 
-  //	  DataBufferByte biDbb = (DataBufferByte)biRast.getDataBuffer();
-  //	  bis_.returnByteBuf(biDbb.getData());
     }
     staleImages_.clear();
-    
-    
+      
     if (bfn_ == null) {
       return;
     }
     
-    Double zoomVal = new Double(zoomer_.getZoomFactor());
+    Double zoomVal = Double.valueOf(zoomer_.getZoomFactor());
     Rectangle2D viewInWorld = getViewInWorld();
+    
     //
-    // When we zoom in far enough, we start to draw it instead:
+    // When we zoom in far enough, we start to draw it instead. If our zoom is too wide, we need to use the
+    // full-screen version and scale it.
     //
+    
+    System.out.println("Want zoom " + zoomVal);
     Integer numObj = zoomMap_.get(zoomVal);
-    if ((numObj == null) || (bufferBuilder_ == null)) {
-      Graphics2D g2 = (Graphics2D)g;
-      drawingGuts(g2, viewInWorld);
-      return;
+    System.out.println("Want zoom obj" + numObj);
+    boolean wideCase = false;
+    
+    if (zoomVal.doubleValue() < zoomMap_.firstKey().doubleValue()) {
+    	numObj = Integer.valueOf(0);
+    	wideCase = true;  	
+    } else {
+	    if ((numObj == null) || (bufferBuilder_ == null)) {
+	      Graphics2D g2 = (Graphics2D)g;
+	      drawingGuts(g2, viewInWorld);
+	      return;
+	    }
     }
     ArrayList<ImageToUse> imagesToUse = new ArrayList<ImageToUse>();
     
@@ -1387,6 +1427,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     ArrayList<Rectangle2D> slicesToCover = new ArrayList<Rectangle2D>();
     bufferBuilder_.getSlicesToCover(numObj, viewInWorld, slicesToCover);
     int numSlice = slicesToCover.size();
+    AffineTransform wideTrans = null;
     for (int i = 0; i < numSlice; i++) {
     	Rectangle2D worldRect = slicesToCover.get(i);
 	    BufferedImage img = null;
@@ -1399,6 +1440,72 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
 	      Point wtv = pointToViewport(new Point((int)Math.round(worldRect.getX()), (int)Math.round(worldRect.getY())));
 	      int stX = wtv.x;
 	      int stY = wtv.y;
+	       System.out.println("WR " + worldRect.getX() + " " + worldRect.getY() + " " + wtv);
+	      //
+	      // We want to fill the current viewport with the model, using the full-screen baseline image. This typically means
+	      // shrinking the image. Note that when the nav panel is shown, a wide and thin network may not need any shrinking, 
+	      // but may need the top and bottom empty space chopped off. A tall and square network will need to be shrunk down
+	      // so the vertical dimension fits. 
+	      //
+	        
+	    	if (wideCase) {
+	    	  wideTrans = new AffineTransform();
+        
+          // When last zoom selected was from fixed set, window resize DOES NOT CHANGE ZOOM. If last zoom
+          // selected was whole model, the ops below are dynamically resizing the model to keep fitting into
+          // viewport (because the fixed set zoom choice remains null) This is not consistent.
+          
+         // double hzoom = viewDim.getHeight() / img.getHeight();
+       //   double wzoom = viewDim.getWidth() / img.getWidth();
+          
+         // double modelAR = worldRectNetAR_.getWidth() / worldRectNetAR_.getHeight();
+         // double viewAR = viewDim.getWidth() / viewDim.getHeight();
+         // System.out.println("modelAR " + modelAR);
+         // System.out.println("viewAR " + viewAR);
+          //
+          // This is the zoom level at which the baseline image is rendered:
+          //
+          
+          double fkz = zoomMap_.firstKey().doubleValue();
+          
+          //
+          // This is the zoom level that we need for the model to be displayed:
+          //
+          
+          double zf = zoomer_.getZoomFactor();
+         
+   
+       //   double izoom = (modelAR < viewAR) ? Math.min(hzoom, wzoom) : Math.max(hzoom, wzoom);
+          
+          double izoom = zf / fkz;
+          
+          
+            System.out.println("FME " + fullModelExtent_);
+     
+        //  System.out.println("izoom " + izoom + " " + hzoom + " " + wzoom + " " + fkz + " " + zf);
+       //   wideTrans.translate(fullModelExtent_.getWidth() / 2.0, fullModelExtent_.getHeight() / 2.0);
+        //  System.out.println(wideTrans);
+	        wideTrans.scale(izoom, izoom);
+          System.out.println(wideTrans);
+	     	//  wideTrans.translate(-img.getWidth() / 2.0, -img.getHeight() / 2.0);
+         //	
+          System.out.println(wideTrans);
+          Point cp = zoomer_.getCenterPoint();
+          System.out.println("PTT " + stX + " " + stY + " " + izoom + " " + cp);
+          
+          
+          
+          stX = stX + (int)Math.round((img.getWidth() / 2.0) * (1.0 - izoom));
+          stY = stY + (int)Math.round((img.getHeight() / 2.0) * (1.0 - izoom));
+          // This is crap. place the corner based on offset from center of viewport, scaled by image size
+         // Point2D tryThis = new Point2D.Double();
+        //  wideTrans.transform(new Point2D.Double(stX, stY), tryThis); 
+         // wtv = pointToViewport(new Point((int)Math.round(tryThis.getX()), (int)Math.round(tryThis.getY())));
+         // stX = wtv.x;
+          //stY = wtv.y;
+	    	}
+
+	      System.out.println("WC " + wideCase + " " + stX + " " + stY);
 	      ImageToUse itu = new ImageToUse(img, stX, stY);
 	      imagesToUse.add(itu);
 	    }
@@ -1412,16 +1519,30 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     while (ituit.hasNext()) {
       ImageToUse it = ituit.next();
       if (it.image != null) {
-        g2p.drawImage(it.image, it.stX, it.stY, null);
+      	int useX = it.stX;
+      	int useY = it.stY;
+      	AffineTransform stash = null;
+      	if (wideTrans != null) {
+      		stash = g2p.getTransform();
+      	//	useX = 0;
+      	//	useY = 0;
+      		g2p.transform(wideTrans);
+      	}
+        g2p.drawImage(it.image, useX, useY, null);
+        if (stash != null) {
+        	g2p.setTransform(stash); 
+        }
         staleImages_.add(it.image);
       }
     }
+    System.out.println("After window resize, need to click on zoom to model twice to get mouse/overview/mag in sync with view");
+    
     clipRect_.setBounds((int)viewInWorld.getX(), (int)viewInWorld.getY(),
                                    (int)viewInWorld.getWidth(), (int)viewInWorld.getHeight());
     if (!targetList_.isEmpty() || !linkList_.isEmpty()) {
       drawSelections(g2p, clipRect_);
     }
-    drawFloater(g, true);
+    drawFloater(g2p, true);
     g.dispose();
     return;
   }
@@ -1448,14 +1569,15 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     
     g2.setPaint(Color.WHITE);
     g2.drawRect(clipRect2_.x, clipRect2_.y, clipRect2_.width, clipRect2_.height); 
-    painter_.paintIt(g2, clipRect2_, false, null);
+    painter_.paintIt(g2, clipRect2_, null);
+    
     if (!targetList_.isEmpty() || !linkList_.isEmpty()) {
       g2.setTransform(saveTrans);
       drawSelections(g2, clipRect2_);
       g2.setTransform(saveTrans);
       g2.transform(zoomer_.getTransform());
     }
-    drawFloater(g, false);
+    drawFloater(g2, false);
     
     return;
   }
@@ -1482,17 +1604,16 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   ** Drawing core
   */
   
-  private void drawFloater(Graphics g, boolean needInit) {
+  private void drawFloater(Graphics2D g2, boolean needInit) {
     if (floaterSet_.isEmpty()) {
       return;
     }        
-    Graphics2D g2 = (Graphics2D)g; 
     AffineTransform saveTrans = null;
     if (needInit) {
       g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
       g2.setRenderingHint(RenderingHints.KEY_FRACTIONALMETRICS, RenderingHints.VALUE_FRACTIONALMETRICS_ON);
       saveTrans = g2.getTransform();   
-      g2.transform(zoomer_.getTransform());    
+      g2.transform(zoomer_.getTransform());  
     }
     painter_.drawFloater(g2, floaterSet_);    
     if (needInit) {
@@ -1533,7 +1654,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     g2.setStroke(selectedStroke);
     g2.transform(trans); 
     g2.fillRect(worldPiece.x, worldPiece.y, worldPiece.width, worldPiece.height);
-    painter_.paintIt(g2, worldPiece, false, null);
+    painter_.paintIt(g2, worldPiece, null);
     return (PAGE_EXISTS);
   }
  
@@ -1561,7 +1682,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     BasicStroke selectedStroke = new BasicStroke(PaintCache.STROKE_SIZE, BasicStroke.CAP_SQUARE, BasicStroke.JOIN_MITER);    
     g2.setStroke(selectedStroke);
     g2.setTransform(transform); 
-    boolean retval = painter_.paintIt(g2, UiUtil.rectFromRect2D(clip), false, null);
+    boolean retval = painter_.paintIt(g2, UiUtil.rectFromRect2D(clip), null);
     
     // To debug sizing problems, this draws a green bounding rectangle:
     //AffineTransform transformx = new AffineTransform();
@@ -1596,7 +1717,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     BasicStroke selectedStroke = new BasicStroke(PaintCache.STROKE_SIZE, BasicStroke.CAP_SQUARE, BasicStroke.JOIN_MITER);    
     g2.setStroke(selectedStroke);
     g2.setTransform(transform);
-    boolean retval = painter_.paintIt(g2, clip, false, null);
+    boolean retval = painter_.paintIt(g2, clip, null);
     // Debug sizing problems
     //g2.setColor(Color.red);
     //g2.drawRect(clip.x, clip.y, clip.width - 1, clip.height - 1);
@@ -1619,7 +1740,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     }
     Graphics2D ig2 = bim_.createGraphics();
     ig2.setTransform(new AffineTransform());
-    Color drawCol = new Color(1.0f, 1.0f, 1.0f, (float)fdo.getSelectionOpaqueLevel()); 
+    Color drawCol = new Color(0.0f, 1.0f, 1.0f, (float)fdo.getSelectionOpaqueLevel()); 
     ig2.setBackground(drawCol);
     ig2.clearRect(0, 0, viewRect.width, viewRect.height);
     ig2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
@@ -1632,10 +1753,15 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     // The zoomer transform is a combination of the zoom, plus needed offset when we
     // have zoomed out and no longer have scrollbars:
     overTrans = new AffineTransform(zoomer_.getTransform());
+     System.out.println("overTrans " + overTrans);
+     
     // Need to offset the origin to handle view rectangle offset:
     otp.translate(-viewRect.getX(), -viewRect.getY());
+         System.out.println("otp " + otp);
     // This needs to be pre-concatenated to have it "done first"
+    System.out.println("Sel preCon " + viewRect + " " + zoomer_.getZoomFactor());
     overTrans.preConcatenate(otp);
+    System.out.println("overTranspo " + overTrans);
     ig2.setTransform(overTrans);
   
     //
@@ -1644,8 +1770,9 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     //ig2.setComposite(AlphaComposite.Clear);
     
     ig2.setComposite(AlphaComposite.Src);
-    painter_.paintIt(ig2, clip, false, selections_);
+    painter_.paintIt(ig2, clip, selections_);
 
+    System.out.println("dsviewRect " + viewRect);
     g2.drawImage(bim_, viewRect.x, viewRect.y, viewRect.width, viewRect.height, null);
     return;
   }
@@ -1666,7 +1793,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   */
   
   public void zoomToRectangle(Rectangle rect) {
-    zcs_.zoomToRectangle(rect);
+    zcs_.zoomToRect(rect);
     return;
   }  
  
@@ -1704,16 +1831,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   ** Return the required size of the layout
   */
   
-  public Rectangle getRequiredSize(String genomeKey, String layoutKey) {
-    return (UiUtil.rectFromRect2D(worldRectNetAR_));
-  }
-  
-  /***************************************************************************
-  **
-  ** Return the required size of the layout
-  */
-  
-  public Rectangle getWorldRect() {
+  public Rectangle getRequiredSize() {
     return (UiUtil.rectFromRect2D(worldRectNetAR_));
   }
   
@@ -1726,15 +1844,13 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     return (UiUtil.rectFromRect2D(this.worldRectScreenAR_));
   }
 
-  
-
   /***************************************************************************
   **
   ** Return the required size of the selected items.  Null if nothing is
   ** selected.
   */
   
-  public Rectangle getSelectionSize(String notUsedKey, String notUsedKeyToo) {
+  public Rectangle getSelectionSize() {
     int numRect = rects_.size();
     if (numRect == 0) {
       return (null);
@@ -1752,7 +1868,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   ** selected.
   */
   
-  public Rectangle getCurrentSelectionSize(String genomeKey, String layoutKey) {
+  public Rectangle getCurrentSelectionSize() {
     if (currSel_ == -1) {
       return (null);
     }
@@ -1782,7 +1898,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   ** Bump to the previous selection for zoom
   */
   
-  public void bumpPreviousSelection(String modelKey) {
+  public void bumpPreviousSelection() {
     currSel_--;
     if (currSel_ < 0) {
       currSel_ = rects_.size() - 1;
@@ -1796,7 +1912,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   ** Bump to the next selection for zoom
   */
   
-  public void bumpNextSelection(String modelKey) {
+  public void bumpNextSelection() {
     currSel_ = (currSel_ + 1) % rects_.size();
     bumpGuts();
     return;
@@ -1851,30 +1967,19 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     return (zoomer_.getSelectedBounds());
   }
   
-  public boolean haveCurrentSelectionForBounds() {  
-    return (zoomer_.haveCurrentSelectionForBounds());
-  }
-
-  public boolean haveMultipleSelectionsForBounds() {  
-    return (zoomer_.haveMultipleSelectionsForBounds());
-  }
-
   public Rectangle getCurrentSelectedBounds() {
     return (zoomer_.getCurrentSelectedBounds());    
   }  
   
-  public Rectangle getWorkspaceBounds() {
-    return (zoomer_.getWorkspaceBounds());    
+  public Rectangle getWorldRect() {
+    return (zoomer_.getWorldRect());    
   }
   
+  @Override
   public Dimension getPreferredSize() {
     return (zoomer_.getPreferredSize());    
   }
   
-  public void fixCenterPoint(boolean doComplete, UndoSupport support, boolean closeIt) {
-    throw new UnsupportedOperationException();
-  }
-
   public Dimension getBasicSize() {
     return (zoomer_.getBasicSize());    
   }
@@ -1883,23 +1988,15 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     return (zoomer_.viewToWorld(vPt));    
   }
   
-  public void setWideZoomFactor(double newZoomVal, Dimension vDim) {
-    zoomer_.setWideZoomFactor(newZoomVal, vDim);
+  public void setZoomFactor(double newZoomVal, Dimension vDim) {
+    zoomer_.setZoomFactor(newZoomVal, vDim);
     return;
-  }
-  
-  public double getWorkspaceZoom(Dimension viewportDim, double percent) {
-    return (zoomer_.getWorkspaceZoom(viewportDim, percent));    
   }
   
   public Rectangle getCurrentBasicBounds() {
     return (zoomer_.getCurrentBasicBounds());    
   }
-  
-  public Rectangle getAllModelBounds() {
-    return (zoomer_.getAllModelBounds());    
-  }
-  
+
   public void adjustWideZoomForSize(Dimension dims) {
     zoomer_.adjustWideZoomForSize(dims);
     return;
@@ -1908,12 +2005,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
   public Point getCenterPoint() {
     return (zoomer_.getCenterPoint());    
   }
-  
-  public void setZoomFactor(double zoom) {
-    zoomer_.setZoomFactor(zoom);
-    return;
-  }
-  
+   
   public double getZoomFactor() {
     return (zoomer_.getZoomFactor());    
   }
@@ -2461,15 +2553,19 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
     System.out.println("This has gotta change");
     HashSet<Integer> targRows = new HashSet<Integer>();
     HashSet<Integer> targCols = new HashSet<Integer>(currColSelections_);
+    HashSet<NID> targIDs = new HashSet<NID>();
     
     int numTarg = targetList_.size();
     for (int i = 0; i < numTarg; i++) {
     	BioFabricNetwork.NodeInfo targetInf = targetList_.get(i);
     	targRows.add(Integer.valueOf(targetInf.nodeRow));
+    	targIDs.add(targetInf.getNodeID());
     }
-    selections_ = new PaintCache.Reduction(targRows, targCols, new HashSet<String>());   
+    selections_ = new PaintCache.Reduction(targRows, targCols, targIDs); 
+    fmt_.setSelections(selections_);
     EventManager mgr = EventManager.getManager();
     SelectionChangeEvent ev = new SelectionChangeEvent(null, null, SelectionChangeEvent.SELECTED_ELEMENT);
+   
     mgr.sendSelectionChangeEvent(ev);  
     return;
   }
@@ -2637,24 +2733,6 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
       this.stY = stY;
     }
   }  
-  
-  /***************************************************************************
-  **
-  ** Draw Object
-  */  
-  
-  public class ZoomerSource implements SimpleWorkspaceSource {
-    
-    private Workspace wksp_;
-    
-    public Workspace getWorkspace() {
-      return (wksp_);
-    }
-    public void simpleSetWorkspace(Workspace workspace) {
-      wksp_ = workspace;
-      return;
-    } 
-  }
   
   /***************************************************************************
   **
@@ -2918,7 +2996,7 @@ public class BioFabricPanel extends JPanel implements ZoomTarget, ZoomPresentati
         }
         
         boolean shiftPressed = me.isShiftDown();
-    
+        System.out.println("click " + me.getX() + "  " + me.getY());
         int currX = me.getX();
         int currY = me.getY();     
         if (lastPress_ == null) {
